--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spacevecalg (1.0.1-1ubuntu1) trusty; urgency=low
+
+  * Upstream update fix versioning
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Wed, 09 Mar 2016 13:46:48 +0900
+
 spacevecalg (1.0.0-1ubuntu1) trusty; urgency=low
 
   * Initial release
