--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spacevecalg (1.0.2-1ubuntu1) unstable; urgency=medium
+
+  * Update ustream version to force upload
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Fri, 09 Jun 2017 13:23:05 +0900
+
 spacevecalg (1.0.1-1ubuntu2) unstable; urgency=medium
 
   * Add Python bindings to the package
